Changed class names in main box

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
       </form>
     </section>
     <main class="container">
-      <div class="main-display  box-shadow">
-        <span class="city">Pittsburgh PA</span>
-        <span class="date">Monday Sept 8, 2025</span>
-        <div class="main-display-weather"><img src="./assets/images/icon-overcast.webp" alt="">
-          <span class="temp">20</span>
+      <div class="main-display-box  box-shadow">
+        <span class="city main-display">Pittsburgh PA</span>
+        <span class="date main-display">Monday Sept 8, 2025</span>
+        <div class="main-display-weather"><img  class="main-display"src="./assets/images/icon-overcast.webp" alt="">
+          <span class="temp main-display">20</span>
         </div>
         
       </div>
