--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     </section>
     <main class="container">
       <div class="main-display-box  box-shadow">
-        <span class="city main-display">Pittsburgh PA</span>
-        <span class="date main-display">Monday Sept 8, 2025</span>
-        <div class="main-display-weather"><img  class="main-display"src="./assets/images/icon-overcast.webp" alt="">
-          <span class="temp main-display">20</span>
+        <span class="city day-display">Pittsburgh PA</span>
+        <span class="date day-display">Monday Sept 8, 2025</span>
+        <div class="main-display"><img  class= "day-display"src="./assets/images/icon-overcast.webp" alt="">
+          <span class="temp day-display">20</span>
         </div>
         
       </div>
