--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
     </section>
     <main class="container">
       <div class="main-display-box  box-shadow">
-        <span class="city day-display">Pittsburgh PA</span>
-        <span class="date day-display">Monday Sept 8, 2025</span>
-        <div class="main-display"><img  class= "day-display"src="./assets/images/icon-overcast.webp" alt="">
-          <span class="temp day-display">20</span>
+        <span class="city current-display">Pittsburgh PA</span>
+        <span class="date current-display">Monday Sept 8, 2025</span>
+        <div class="main-display"><img  class= "current-display"src="./assets/images/icon-overcast.webp" alt="">
+          <span class="temp current-display">20</span>
         </div>
         
       </div>
       <section class="day-container">
         <div class="day-boxes">
           <h4>Feels like </h4>
-         <span class="day-display">36°<!-- Insert temperature here --></span>
+         <span class="current-display">36°<!-- Insert temperature here --></span>
         </div>
         <div class="day-boxes">
           <h4>Humidity</h4>
-         <span class="day-display">40%<!-- Insert humidity here --></span>
+         <span class="current-display">40%<!-- Insert humidity here --></span>
          </div>
         <div class="day-boxes">
           <h4>Wind</h4>
-           <span class="day-display">15 mph<!-- Insert wind here --></span>
+           <span class="current-display">15 mph<!-- Insert wind here --></span>
         </div>
         <div class="day-boxes">
           <h4>Precipitation</h4>
-           <span class="day-display">0 in <!-- Insert precipitation here --></span>
+           <span class="current-display">0 in <!-- Insert precipitation here --></span>
         </div>
       </section>
       Daily forecast
