--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
         </div>
       </section>
       Daily forecast
+     <section class="day-display-conainer">
+        <div class="day-display-box">
+          <span class="day-display"></span>
+         <img src="" alt="" class="day-display">
+          <span class="day-display"></span>
+          <span class="day-display"></span>
+        </div>
+       
+       
+     </section>
       <!-- Insert daily forecast for the next 7 days here -->
       Hourly forecast
       <!-- Insert hourly forecast for the selected day here -->
