Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </section>
       <!-- Insert daily forecast for the next 7 days here -->
       <h2>Daily forecast</h2>
-     <section class="day-display-conainer">
+     <section class="day-display-container">
         <div class="day-display-box">
           <span class="day-display">Mon</span>
           <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
