Removed some redundant selectors on css

--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
         
       </div>
       <section class="current-container">
-        <div class="current-box">
+        <div class="box-shadow current-box">
           <h4>Feels like </h4>
          <span class="current-display">36°<!-- Insert temperature here --></span>
         </div>
-        <div class="current-box">
+        <div class="box-shadow current-box">
           <h4>Humidity</h4>
          <span class="current-display">40%<!-- Insert humidity here --></span>
          </div>
-        <div class="current-box">
+        <div class="box-shadow current-box">
           <h4>Wind</h4>
            <span class="current-display">15 mph<!-- Insert wind here --></span>
         </div>
-        <div class="current-box">
+        <div class="box-shadow current-box">
           <h4>Precipitation</h4>
           <span class="current-display">0 in <!-- Insert precipitation here --></span>
         </div>
@@ -89,7 +89,7 @@
       <!-- Insert daily forecast for the next 7 days here -->
       <h2>Daily forecast</h2>
      <section class="day-display-container">
-        <div class="day-display-box">
+        <div class="box-shadow day-display-box">
           <span class="day-display">Mon</span>
           <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
           <div class="hi-lo-flex">
@@ -97,7 +97,7 @@
             <span class="day-display">55</span>
           </div>
         </div>
-        <div class="day-display-box">
+        <div class="box-shadow day-display-box">
                 <span class="day-display">Tue</span>
                 <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
                <div class="hi-lo-flex">
@@ -105,7 +105,7 @@
                  <span class="day-display">44</span>
                </div>
         </div> 
-        <div class="day-display-box">
+        <div class="box-shadow day-display-box">
               <span class="day-display">Wed</span>
                <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
               <div class="hi-lo-flex">
@@ -113,7 +113,7 @@
                 <span class="day-display">33</span>
               </div>
             </div>
-        <div class="day-display-box">
+        <div class="box-shadow day-display-box">
               <span class="day-display">Thu</span>
                 <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
               <div class="hi-lo-flex">
@@ -121,7 +121,7 @@
                 <span class="day-display">22</span>
               </div>
         </div> 
-        <div class="day-display-box">
+        <div class="box-shadow day-display-box">
               <span class="day-display">Fri</span>
                 <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
               <div class="hi-lo-flex">
@@ -129,7 +129,7 @@
                 <span class="day-display">11</span>
               </div>
         </div> 
-        <div class="day-display-box">
+        <div class="box-shadow day-display-box">
               <span class="day-display">sat</span>
                 <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
               <div class="hi-lo-flex">
@@ -137,7 +137,7 @@
                 <span class="day-display">00</span>
               </div>
         </div> 
-        <div class="day-display-box">
+        <div class="box-shadow day-display-box">
               <span class="day-display">sun</span>
                <img src="./assets/images/icon-overcast.webp" alt="" class="day-display">
               <div class="hi-lo-flex">
@@ -149,7 +149,7 @@
      </section>
 
      <!-- Insert hourly forecast for the selected day here -->
-      <section class="hourly-display-container">
+      <section class="box-shadow hourly-display-container">
         <div class="hourly-menu-box">
           <h2>Hourly forecast</h2>
           <button class="hourly-button">Monday</button>
