--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <section class="box-shadow hourly-display-container">
         <div class="hourly-menu-box">
           <h2>Hourly forecast</h2>
-          <button class="hourly-button">Monday</button>
+          <button class="hourly-btn btn">Monday</button>
         </div>
         <div class="hourly-display-box">
           <div>
